<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation"
    app:startDestination="@id/splash_fragment"
    tools:ignore="UnusedNavigation">

    <fragment
        android:id="@+id/splash_fragment"
        android:name="com.droidhats.campuscompass.views.SplashFragment"
        android:label="@string/splash_screen"
        tools:layout="@layout/splash_fragment" >
        <action
            android:id="@+id/action_splashFragment_to_mapsActivity"
            app:destination="@id/map_fragment"
            app:popUpTo="@id/splash_fragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/map_fragment"
...
