<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.SearchFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/searchHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorPrimaryDark">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/search_bar_margin"
            >

            <ImageButton
                android:id="@+id/backFromNavigationButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_chevron_left_black_42dp"
                android:visibility="gone"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/contentDescription_BackButton"
              />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/mainSearchBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:searchIcon="@null"
                android:layout_toEndOf="@id/backFromNavigationButton"
                app:queryBackground="@color/white"
                app:iconifiedByDefault="false"
                app:queryHint="Search" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/secondarySearchBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mainSearchBar"
                android:clickable="true"
                android:focusable="true"
                app:iconifiedByDefault="false"
                android:visibility="gone"
                android:layout_toEndOf="@id/backFromNavigationButton"
                android:maxWidth="@dimen/search_bar_max_width"
                app:searchIcon="@null"
                app:queryBackground="@android:color/transparent"
                app:queryHint="To" />


        </RelativeLayout>

        <ImageButton
            android:id="@+id/startNavigationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_directions_white_56dp"
            android:visibility="gone"
            android:background="?selectableItemBackground"
            android:layout_gravity="end|center_vertical"
            android:contentDescription="@string/contentDescription_Navigate" />

    </androidx.cardview.widget.CardView>

    <RadioGroup
        android:id="@+id/radioTransportGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:visibility="gone"
        android:layout_below="@+id/searchHead"
        android:orientation="horizontal"
        android:checkedButton="@id/radio_transport_mode_driving"
        android:paddingTop="10dp"
        >

        <RadioButton
            android:id="@+id/radio_transport_mode_driving"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:button="@null"
            android:drawableTop="@drawable/radio_car"
            android:text = "@string/dash"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/radio_transport_mode_transit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:button="@null"
            android:drawableTop="@drawable/radio_transit"
            android:gravity="center"
            android:text = "@string/dash"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/radio_transport_mode_walking"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:button="@null"
            android:drawableTop="@drawable/radio_walking"
            android:text = "@string/dash"
            android:textColor="@color/white"/>

        <RadioButton
            android:id="@+id/radio_transport_mode_bicycle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:button="@null"
            android:drawableTop="@drawable/radio_bicycle"
            android:text = "@string/dash"
            android:textColor="@color/white"/>

    </RadioGroup>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_suggestions_recycler_view"
        android:name="com.droidhats.campuscompass.CalendarFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioTransportGroup"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        android:overScrollMode="never"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        tools:context=".views.SearchFragment" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/myCurrentLocationFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/white"
        android:layout_margin="15dp"
        app:borderWidth="15dp"
        app:elevation="6dp"
        android:visibility="invisible"
        android:textAllCaps="false"
        android:src="@drawable/ic_my_location_blue_36dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        />

    <TextView
        android:id="@+id/search_info"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchInfo"
        android:visibility="visible"
        android:textAlignment="center"
        android:textSize="15sp"
        />

</RelativeLayout>