...
            android:layout_below="@+id/buttonCloseInstructions"
            android:orientation="horizontal">

            <androidx.core.widget.NestedScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/nextArrow"
                android:layout_centerHorizontal="true"
                android:layout_toStartOf="@+id/nextArrow"
                android:layout_toEndOf="@+id/prevArrow"
                android:fadeScrollbars="false"
                android:scrollbars="vertical">

...
