<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/quantum_white_100"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">

        <ImageButton
            android:id="@+id/button_menu"
            android:layout_width="100dp"
            android:layout_height="51dp"
            android:layout_marginTop="10dp"
            android:background="#FFFFFF"
            android:contentDescription="menu button"
            android:padding="30dp"
            android:src="@drawable/icon_menu" />

        <TextView
            android:id="@+id/text_calendar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="20dp"
            android:text="Shuttle Schedule"
            android:textAlignment="center"
            android:textSize="20sp" />

    </RelativeLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <TextView
        android:id="@+id/nextShuttleDeparture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Next Shuttle Departure: -"
        android:layout_gravity="center_horizontal"/>
    
</LinearLayout>